--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/devtools": "latest",
     "@pinia/nuxt": "^0.5.1",
     "cross-env": "^7.0.3",
+    "gsap": "^3.12.5",
     "nuxt": "^3.10.2",
     "pinia": "^2.1.7",
     "sass": "^1.49.0",
