--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@pinia/nuxt": "^0.5.1",
     "cross-env": "^7.0.3",
     "gh-pages": "^6.1.1",
-    
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
     "nuxt": "^3.10.2",
     "pinia": "^2.1.7",
     "sass": "^1.49.0",
